--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.2"
   },
@@ -39,10 +40,13 @@
     ],
     "rules": {
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": ["error", { 
-        "varsIgnorePattern": "^[A-Z_]",
-        "argsIgnorePattern": "^_"
-      }],
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "varsIgnorePattern": "^[A-Z_]",
+          "argsIgnorePattern": "^_"
+        }
+      ],
       "react-hooks/exhaustive-deps": "warn"
     }
   }
